@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.audio.msplaylist" name="Mp3 Skull Playlist" version="1.0.0" provider-name="Anonymous">
+<addon id="plugin.audio.msplaylist" name="Mp3 Skull Playlist" version="1.0.1" provider-name="Anonymous">
   <requires>
-    <import addon="xbmc.python" version="2.0"/>
+    <import addon="xbmc.python" version="2.1.0"/>
   </requires>
   <extension point="xbmc.python.pluginsource" library="addon.py">
     <provides>audio</provides>
