@@ -2,5 +2,6 @@
 <settings>
    <category label="Definicoes gerais">
 	  <setting id="download-folder" type="folder" label="[B]Pasta de Download[/B]" default=""/>
+	  <setting id="autoplay" type="bool" label="Reproduzir item seguinte automaticamente" default="true"/>
    </category>
 </settings>
